# PeakGuard

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: AGENTS.md  mdd-check.yml
config/: AGENTS.md  portfolio.yaml
docs/: AGENTS.md  README.md  architecture.md  index.md  operations.md  roadmap.md  status.md
docs/concepts/: README.md  configuration.md  data-contracts.md  domain-model.md  glossary.md  portfolio-actions.md  portfolio-context.md  review-levels.md  testing-strategy.md
docs/decisions/: 0001-csv-gist-persistence.md  0002-fail-closed-on-gist-read-errors.md  0003-discount-review-level-precedence.md  0004-separate-price-levels-from-portfolio-actions.md  0005-scope-portfolio-context-to-reportable-assets.md  0006-three-section-report-policy.md  0007-manual-history-pruning.md  README.md
docs/meta/: README.md
docs/proposals/: PROP-0001-distinguish-gist-read-failures.md  PROP-0002-define-discount-review-levels.md  PROP-0003-portfotrack-context-mvp.md  README.md
docs/roadmap/: README.md  later.md  next.md  now.md
docs/runbooks/: README.md  gist-history-read-failures.md  provider-fetch-failures.md
docs/work-notes/: 2026-07.md  README.md
src/: errors.py  fetcher.py  main.py
src/peakguard/: AGENTS.md  cli.py  config.py  errors.py  fetcher.py  gist_client.py  (+6 more)
tests/: AGENTS.md  test_cli.py  test_config.py  test_errors.py  test_fetcher.py  test_gist_client.py  test_main.py  test_mdd_calc.py  test_notifier.py  test_portfolio_action.py  test_portfolio_context.py  test_storage.py  test_workflow.py
(+10 files in other folders)
